--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -36,29 +36,36 @@
                         </div>
                     </a>
                 </div>
-                {% for diary in diaries %}
+                {% for item in diary_list %}
                 <div class="card">
-                    <a href="{% url 'detail_diary_by_id' unique_diary_id=diary.unique_diary_id %}" class="link_card">
+                    <a href="{% url 'detail_diary_by_id' unique_diary_id=item.diary.unique_diary_id %}" class="link_card">
                         <div class="card-img">
-                            {% if diary.representative_image %}
-                                <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="{{ diary.diarytitle }}">
+                            {% if item.diary.representative_image %}
+                                <img src="data:image/png;base64,{{ item.diary.representative_image.image_file }}" width="300" alt="Representative Image">
                             {% else %}
                                 <span class="txt_noimg">No image</span>
                             {% endif %}
                         </div>
                         <div class="card-body">
-                            <strong class="card-title">{{ diary.diarytitle }}</strong>
+                            <strong class="card-title">{{ item.diary.diarytitle }}</strong>
                             <div class="badge_tour">
                                 <span class="scope_badge">
-                                    <img src="" class="img_badge">성산일출봉 뱃지
+                                    <em class="screen_out">{{ item.badge_name }} 뱃지</em>
+                                    <img src="data:image/png;base64,{{ item.badge_image }}" class="img_badge" alt="{{ item.badge_name }}">
                                 </span>
-                                <strong class="tit_badge">{{ diary.badge_name|default:"반짝이는 성산일출봉" }}</strong>
+                                <em class="screen_out">별명</em>
+                                <strong class="tit_badge">{{ item.nickname }}</strong>
                             </div>
-                            <p class="card-date">{{ diary.created_at|date:"Y년 n월 j일" }}</p>
+                            <p class="card-date">{{ item.diary.created_at|date:"Y년 n월 j일" }}</p>
                         </div>
                     </a>
                 </div>
-                {% endfor %}
+            {% empty %}
+            <div class="no-diaries">
+                <p>작성된 다이어리가 없습니다.</p>
+            </div>
+            {% endfor %}
+
             </div>
             <button class="carousel-control-prev" type="button" id="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
