--- a/diaryapp/templates/diaryapp/user_list_diary.html
+++ b/diaryapp/templates/diaryapp/user_list_diary.html
@@ -1,38 +1,93 @@
-<!--로그인 한 사용자가 보는 자신의 리스트-->
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>My Diary List</title>
-</head>
-<body>
-    <h1>My Diary List</h1>
-    <ul>
-        {% for diary in diary_list %}
-            <li>
-                <a href="{% url 'detail_diary_by_id' unique_diary_id=diary.unique_diary_id %}">{{ diary.diarytitle }}</a>
-                <br/>
-                {% if diary.representative_image %}
-                    <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="Representative Image" width="150">
-                {% endif %}
-            </li>
-        {% empty %}
-            <li>No diaries found.</li>
-        {% endfor %}
-    </ul>
+{% include 'header.html' %}
 
-<!--        &lt;!&ndash; diary_list.html &ndash;&gt;-->
-<!--    <h2>내 다이어리와 태그된 다이어리</h2>-->
-<!--    <ul>-->
-<!--        {% for diary in diaries %}-->
-<!--            <li>{{ diary.title }}</li>-->
-<!--            &lt;!&ndash; 원하는 다이어리의 정보 표시 &ndash;&gt;-->
-<!--        {% endfor %}-->
-<!--    </ul>-->
+<section id="list_diary" class="list list_diary">
+    <h2 class="screen_out">다이어리 리스트</h2>
+    <div class="write-container">
+        <div class="list-actions">
+            <div class="list-actions-header">
+                <a href="{% url 'list_diary' %}">
+                    <h1 style="color: #636363; font-weight: bold;">다이어리 목록</h1>
+                </a>
+            </div>
+            <div class="list-actions-buttons">
+                <button class="btn-list-action">
+                    <a href="{% url 'write_diary' %}">새 일기 작성하기</a>
+                </button>
+            </div>
+        </div>
+        <form method="GET" action="{% url 'list_diary' %}">
+            <div class="form-row">
+                <div class="form-group">
+                    {{ form.year }}
+                </div>
+                <div class="form-group">
+                    {{ form.month }}
+                </div>
+                <button type="submit" class="btn btn-primary">검색</button>
+            </div>
+        </form>
 
-    <!-- 일기 작성 화면으로 가는 버튼 추가 (로그인한 사용자의 경우만 가능)-->
-        <a href="{% url 'write_diary' %}">
-            <button>Write a New Diary</button>
-        </a>
-</body>
-</html>
+        <hr/>
+        <div class="diary-grid">
+            {% for item in diary_list %}
+                <div class="card">
+                    <a href="{% url 'detail_diary_by_id' unique_diary_id=item.diary.unique_diary_id %}" class="link_card">
+                        <div class="card-img">
+                            {% if item.diary.representative_image %}
+                                <img src="data:image/png;base64,{{ item.diary.representative_image.image_file }}" width="300" alt="Representative Image">
+                            {% else %}
+                                <span class="txt_noimg">No image</span>
+                            {% endif %}
+                        </div>
+                        <div class="card-body">
+                            <strong class="card-title">{{ item.diary.diarytitle }}</strong>
+                            <div class="badge_tour">
+                                <span class="scope_badge">
+                                    <em class="screen_out">{{ item.badge_name }} 뱃지</em>
+                                    <img src="data:image/png;base64,{{ item.badge_image }}" class="img_badge"  alt={{ item.badge_name }}>
+                                </span>
+                                <em class="screen_out">별명</em>
+                                <strong class="tit_badge">{{ item.nickname }}</strong>
+                            </div>
+                            <p class="card-date">{{ item.diary.created_at|date:"Y년 n월 j일" }}</p>
+                        </div>
+                    </a>
+                </div>
+            {% empty %}
+                <p>No diaries found.</p>
+            {% endfor %}
+        </div>
+
+        <!-- 페이징 네비게이션 -->
+        <div class="pagination">
+            {% if page_obj.has_previous %}
+                <a href="?page=1{% if form.year.value %}&year={{ form.year.value }}{% endif %}{% if form.month.value %}&month={{ form.month.value }}{% endif %}" class="pagination-btn">처음</a>
+                <a href="?page={{ page_obj.previous_page_number }}{% if form.year.value %}&year={{ form.year.value }}{% endif %}{% if form.month.value %}&month={{ form.month.value }}{% endif %}" class="pagination-btn">이전</a>
+            {% endif %}
+
+            <span class="pagination-current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}{% if form.year.value %}&year={{ form.year.value }}{% endif %}{% if form.month.value %}&month={{ form.month.value }}{% endif %}" class="pagination-btn">다음</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}{% if form.year.value %}&year={{ form.year.value }}{% endif %}{% if form.month.value %}&month={{ form.month.value }}{% endif %}" class="pagination-btn">끝</a>
+            {% endif %}
+        </div>
+    </div>
+
+    <script>
+    function adjustGridColumns() {
+        var grid = document.querySelector('#list_diary .diary-grid');
+        var containerWidth = grid.offsetWidth;
+        var columnCount = Math.floor(containerWidth / 300); // 300px는 각 카드의 최소 너비입니다
+        columnCount = Math.max(1, Math.min(3, columnCount)); // 1에서 3 사이의 값으로 제한
+        grid.style.gridTemplateColumns = `repeat(${columnCount}, 1fr)`;
+    }
+
+    window.addEventListener('load', adjustGridColumns);
+    window.addEventListener('resize', adjustGridColumns);
+    </script>
+</section>
+
+{% include 'footer.html' %}
