--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -35,11 +35,17 @@
         <h3 class="tit_main">여행 다이어리</h3>
         <div class="slider-container">
             <div class="slider">
+                {% if diary_list or schedule_links_and_diary_links %}
+
+                {% if is_own_page %}
+                {% for link in schedule_links_and_diary_links %}
                 <div class="card add">
-                    <strong class="card-title"><a href="" class="link_title">2024 진도 여행 계획 길어지면 말줄임 없이 쭉쭉쭉!</a><span class="badge text-bg-dark">new</span></strong>
-                    <a href="#" class="link_card">
+                    <strong class="card-title"><a href="{{ link.schedule_url }}" class="link_title">{{ link.plan_title }}</a><span class="badge text-bg-dark">new</span></strong>
+                    <a href="{{ link.create_diary_url }}" class="link_card">
                         <div class="card-img">
-                            <img src="http://tong.visitkorea.or.kr/cms/resource/36/3079736_image2_1.jpg" alt="가계해수욕장">
+                            {% if link.bg %}
+                            <img src="{{link.bg}}" alt="{{link.title}}">
+                            {% endif %}
                             <span class="txt_noimg">No image</span>
                         </div>
                         <div class="card-add">
@@ -53,6 +59,9 @@
                         </div>
                     </a>
                 </div>
+                {% endfor %}
+                {% endif %}
+
                 {% for item in diary_list %}
                 <div class="card">
                     <a href="{% url 'detail_diary_by_id' unique_diary_id=item.diary.unique_diary_id %}" class="link_card">
@@ -77,11 +86,13 @@
                         </div>
                     </a>
                 </div>
-                {% empty %}
+                {% endfor %}
+
+                {% else %}
                 <div class="no-diaries">
                     <p>작성된 다이어리가 없습니다.</p>
                 </div>
-                {% endfor %}
+                {% endif %}
             </div>
             <button class="carousel-control-prev" type="button" id="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
