--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -21,7 +21,7 @@
         </div>
         <div class="badge_tour badge_main">
             <strong class="screen_out">대표 여행 뱃지</strong>
-            <a href="" class="link_badge">
+            <a href="{{badge_link}}" class="link_badge">
                 <span class="scope_badge">
                     <em class="screen_out">{{ user_badge_name }} 뱃지</em>
                     <img src="data:image/png;base64,{{ user_badge_image }}" class="img_badge"  alt={{ user_badge_name }}>
