--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -24,7 +24,7 @@
             <a href="{{badge_link}}" class="link_badge">
                 <span class="scope_badge">
                     <em class="screen_out">{{ user_badge_name }} 뱃지</em>
-                    <img src="data:image/png;base64,{{ user_badge_image }}" class="img_badge"  alt={{ user_badge_name }}>
+                    <img src="data:image/png;base64,{{ user_badge_image }}" class="img_badge"  alt="{{ user_badge_name }}">
                 </span>
                 <em class="screen_out">별명</em>
                 <strong class="tit_badge">{{ user_nickname }}</strong>
