--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -61,10 +61,10 @@ strong, b{color:inherit}
     }
 .badge_tour .scope_badge{
     display: block;
+    position:relative;
     width:36px;
     height:36px;
-    border-radius:36px;
-    position:relative;
+    border-radius:100%;
     background-position:0 0;
     background-color:#eee;
     overflow: hidden;
@@ -72,11 +72,18 @@ strong, b{color:inherit}
     line-height: 0;
     text-indent: -9999px;
     vertical-align: top;
+    box-shadow: 2px 4px 12px #00000014;
+    transition:.3s cubic-bezier(0,0,.5,1);
+    box-sizing:border-box;
     }
 .badge_tour .img_badge{
     display:block;
-    width:100%;
-    height:100%
+    position:absolute;
+    left:-3%;
+    top:-3%;
+    z-index:1;
+    width:calc(100% + 6%);
+    height:calc(100% + 6%);
 }
 .badge_tour .tit_badge{
     margin-left:1em;
@@ -177,7 +184,7 @@ main {
 .info_diary .badge_tour{margin-top:1em}
 .card_diary{position:relative;margin-top:3em}
 .card_diary .tit_main{margin-left:1em;}
-.link_all{position:absolute;right:1em;top:0;font-size:.8em;line-height:2.5}
+.link_all{position:absolute;right:1em;top:0;font-size:.8em;line-height:2.5;font-weight:400}
 .link_all svg{vertical-align:text-top}
 #main .btn_setting{width:32px;height:32px;overflow:hidden;box-shadow:none;font-size:0;line-height: 0;opacity:0.5; transition: opacity 0.2s ease;}
 #main .btn_setting:hover, #main .btn_setting:active, #main .btn_setting:focus{background:none;opacity:1}
@@ -201,18 +208,20 @@ main {
 .carousel-control-next, .carousel-control-prev{
     top:auto;
     bottom:auto;
+    z-index:100;
     min-width:auto;
     width:5em;
     height:5em;
     box-shadow:none !important;
+    background-color:rgba(222, 222, 222, .5) !important;
     }
-.carousel-control-next:focus, .carousel-control-next:hover, .carousel-control-prev:focus, .carousel-control-prev:hover{
-    background-color:rgba(222, 222, 222, 0.5);
+
+.carousel-control-next:hover, .carousel-control-prev:hover{
+    background-color:rgba(222, 222, 222, .7) !important;
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon{
     filter: invert(1) grayscale(100);
-    opacity:.5;
 }
 
 /* card - 다이어리 */
@@ -234,12 +243,48 @@ main {
 .card.add .card-title{position:absolute;left:1em;top:1em;right:2em;color:#fff !important;opacity:.8;z-index:3;line-height:1}
 .card.add .link_title:hover{text-decoration:underline}
 .card.add .txt_info{position:absolute;bottom:0;margin-bottom:0}
-.card.add .text-bg-dark{background-color:#011052 !important;vertical-align:text-top;line-height:inherit;margin-left:5px}
+.card.add .text-bg-dark{background-color:#8cc9f0 !important;vertical-align:text-top;line-height:inherit;margin-left:5px}
 .card.add .link_card:hover, .card_plan .link_card:focus {transform: scale3d(1.01, 1.01, 1.01);}
 .card.add .link_card:hover .card-add, .card_plan .link_card:focus .card-add{opacity:0.8;transform: .3s cubic-bezier(0,0,.5,1)}
 .card-add{position:absolute;top:0;left:0;z-index:1;display:flex;width:100%;height:100%;align-items:center;justify-content:center;opacity:0.5;text-align:center;}
 .card-add svg{filter: invert(1) grayscale(100)}
 .card-add .txt_add{display:block;color:#fff;margin-top:.5em}
+
+
+
+/* 나의 여행 뱃지 */
+#main .tit_main{margin-bottom:0}
+#main > .main_badge{padding-left:0;padding-right:0;overflow:hidden}
+.main_badge .scope_info{padding:0 1em}
+
+.main_badge .badge_tour{display:inline-block;width:128px}
+.main_badge .badge_tour .link_badge{display:block;}
+.main_badge .badge_tour .scope_badge{width:70px;height:70px;margin:0 auto}
+.main_badge .badge_tour .tit_badge{display:block;height:45px;margin:10px 0 0 0;text-align:center;line-height:1.4;word-break:keep-all;}
+.main_badge .badge_tour button{display:block;min-width:auto;margin:10px auto 0;font-weight:400}
+
+.main_badge .tit_badgemain{width:28px;height:28px;overflow:hidden;font-size: 0;line-height: 0;margin-top:-11.2px}
+.main_badge .tit_badgemain svg{color:#8cc9f0}
+.main_badge .badge_main{display:flex;width:auto;margin-top:30px}
+.main_badge .badge_main .link_badge{margin-left:15px}
+.main_badge .badge_main .scope_badge{width:120px;height:120px}
+.main_badge .badge_main .tit_badge{margin-top:15px;height:auto}
+.main_badge .badge_main .unset_main{margin:-11.2px 0 0 20px}
+
+.slide_tour{display:flex;align-items:center;position:relative;width:100%;}
+.slide_tour .slider{display:flex;z-index:10;transition:transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);margin-left:1em}
+.main_badge .slide_tour{margin-top:30px}
+.main_badge .list_badge{list-style:none;margin:0;padding-left:0}
+.main_badge .list_badge li{position:relative;margin-left:1em;padding-left:0}
+.main_badge .list_badge .main-selected .scope_badge{border:3px solid #011052}
+.main_badge .list_badge .link_badge:hover .scope_badge{transform:scale3d(1.02, 1.02, 1.02);box-shadow: 2px 4px 18px #00000029;}
+.main_badge .list_badge .scope_badge.dragging{}
+.main_badge .txt_info{display:block;padding:0 1em;margin:30px 0 0 0}
+@media (hover: none) {
+    .main_badge .txt_info{display:none}
+}
+
+
 
 /* 다이어리 작성 */
 .modal-backdrop {
@@ -507,3 +552,4 @@ main {
 #list_diary .card-body {
     padding: 1rem;
 }
+
