--- a/diaryapp/templates/diaryapp/diary.html
+++ b/diaryapp/templates/diaryapp/diary.html
@@ -20,7 +20,12 @@
             {% endif %}
         </div>
         <div class="badge_tour badge_main">
-            <strong class="screen_out">대표 여행 뱃지</strong>
+            <h4 class="tit_badgemain">
+                대표 여행 뱃지
+                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg>
+            </h4>
             <a href="{{badge_link}}" class="link_badge">
                 <span class="scope_badge">
                     <em class="screen_out">{{ user_badge_name }} 뱃지</em>
@@ -35,7 +40,7 @@
         <h3 class="tit_main">여행 다이어리</h3>
         <div class="slider-container">
             <div class="slider">
-                {% if diary_list or schedule_links_and_diary_links %}
+            {% if diary_list and schedule_links_and_diary_links %}
 
                 {% if is_own_page %}
                 {% for link in schedule_links_and_diary_links %}
@@ -50,7 +55,7 @@
                         </div>
                         <div class="card-add">
                             <div class="inner-add">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                                   <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
                                 </svg>
