--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -64,6 +64,7 @@ strong, b{color:inherit}
     position:relative;
     width:36px;
     height:36px;
+    min-width:36px;
     border-radius:100%;
     background-position:0 0;
     background-color:#eee;
@@ -87,13 +88,20 @@ strong, b{color:inherit}
 }
 .badge_tour .tit_badge{
     margin-left:1em;
-    height: 36px;
     font-size:1em;
-    line-height: 38px;
+    line-height:1.4;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 @media screen and (max-width: 480px) {
   .head_tour .badge_tour .tit_badge{display:none}
 }
+.tit_badgemain{width:28px;height:28px;min-width:28px;overflow:hidden;font-size: 0;line-height: 0;margin-top:-11.2px}
+.tit_badgemain svg{color:#8cc9f0}
+.tit_badgemain + .link_badge{margin-left:15px}
 
 /* Sidebar */
 .tit_nav{
@@ -171,22 +179,23 @@ main {
 .scrollarea {
   overflow-y: auto;
 }
+.head_tour .badge_tour{max-width:60%}
 
 
 
-/* diary */
+/* 다이어리 메인 */
+.main .info_main{padding:0 1em}
+#main > .main_diary{padding-left:0;padding-right:0;}
+.main_diary .scope_tit{display:flex}
+.main_diary .tit_badgemain{width:20px;height:20px;min-width:20px;margin-top:3px}
+.main_diary .tit_diary{font-size:1.5rem;font-weight:500;word-break:keep-all}
 
-#main > .main_diary{
-    padding-left:0;
-    padding-right:0;
-    }
-.info_diary{padding:0 1em}
-.info_diary .badge_tour{margin-top:1em}
+.main_diary .badge_main .scope_badge{width:70px;height:70px;min-width:70px}
 .card_diary{position:relative;margin-top:3em}
 .card_diary .tit_main{margin-left:1em;}
 .link_all{position:absolute;right:1em;top:0;font-size:.8em;line-height:2.5;font-weight:400}
 .link_all svg{vertical-align:text-top}
-#main .btn_setting{width:32px;height:32px;overflow:hidden;box-shadow:none;font-size:0;line-height: 0;opacity:0.5; transition: opacity 0.2s ease;}
+#main .btn_setting{width:32px;height:32px;min-width:32px;overflow:hidden;box-shadow:none;font-size:0;line-height: 0;opacity:0.5; transition: opacity 0.2s ease;}
 #main .btn_setting:hover, #main .btn_setting:active, #main .btn_setting:focus{background:none;opacity:1}
 
 /* slider */
@@ -234,8 +243,8 @@ main {
 .card-img::before{position:absolute;left:0;top:0;width:100%;height:100%;z-index:1;background-color:rgba(0, 0, 0, 0.1);content:''}
 .card-img img{width:100%;height:100%;object-fit: cover}
 .card-body .card-title{display:block;font-weight:600;width:100%;text-overflow: ellipsis;white-space: nowrap;overflow:hidden;}
-.card-body .badge_tour .scope_badge{width:32px;height:32px}
-.card-body .badge_tour .tit_badge{font-size:.8em;opacity:.8;width:80%;text-overflow: ellipsis;white-space: nowrap;overflow:hidden;}
+.card-body .badge_tour .scope_badge{width:32px;height:32px;min-width:32px}
+.card-body .badge_tour .tit_badge{display:block;font-size:.8em;opacity:.8;width:80%;white-space:nowrap;}
 
 /* card - 일정 */
 .card.add .card-img{height:100%;border-radius:inherit}
@@ -247,39 +256,44 @@ main {
 .card.add .link_card:hover, .card_plan .link_card:focus {transform: scale3d(1.01, 1.01, 1.01);}
 .card.add .link_card:hover .card-add, .card_plan .link_card:focus .card-add{opacity:0.8;transform: .3s cubic-bezier(0,0,.5,1)}
 .card-add{position:absolute;top:0;left:0;z-index:1;display:flex;width:100%;height:100%;align-items:center;justify-content:center;opacity:0.5;text-align:center;}
-.card-add svg{filter: invert(1) grayscale(100)}
-.card-add .txt_add{display:block;color:#fff;margin-top:.5em}
+.card-add .inner-add{margin-top:20px}
+.card-add svg{width:40px;height:40px;filter:invert(1) grayscale(100)}
+.card-add .txt_add{display:block;color:#fff;margin-top:.5em;font-weight:500;font-size:1.1rem}
+
+.main_diary .slider-container{margin-top:30px}
 
 
 
 /* 나의 여행 뱃지 */
 #main .tit_main{margin-bottom:0}
 #main > .main_badge{padding-left:0;padding-right:0;overflow:hidden}
-.main_badge .scope_info{padding:0 1em}
 
 .main_badge .badge_tour{display:inline-block;width:128px}
-.main_badge .badge_tour .link_badge{display:block;}
-.main_badge .badge_tour .scope_badge{width:70px;height:70px;margin:0 auto}
-.main_badge .badge_tour .tit_badge{display:block;height:45px;margin:10px 0 0 0;text-align:center;line-height:1.4;word-break:keep-all;}
+.main_badge .badge_tour .link_badge{display:block}
+.main_badge .badge_tour .scope_badge{width:70px;height:70px;min-width:70px;margin:0 auto}
+.main_badge .badge_tour .tit_badge{display:block;height:2.6em;margin:10px 0 0 0;text-align:center;word-break:keep-all;}
 .main_badge .badge_tour button{display:block;min-width:auto;margin:10px auto 0;font-weight:400}
+.main_badge .badge_tour .unset_main{background-color:rgba(222, 222, 222, 0.3) !important}
 
-.main_badge .tit_badgemain{width:28px;height:28px;overflow:hidden;font-size: 0;line-height: 0;margin-top:-11.2px}
-.main_badge .tit_badgemain svg{color:#8cc9f0}
 .main_badge .badge_main{display:flex;width:auto;margin-top:30px}
-.main_badge .badge_main .link_badge{margin-left:15px}
-.main_badge .badge_main .scope_badge{width:120px;height:120px}
-.main_badge .badge_main .tit_badge{margin-top:15px;height:auto}
+.main_badge .badge_main .scope_badge{width:120px;height:120px;min-width:120px}
+@media screen and (max-width: 360px) {
+  .main_badge .badge_tour .link_badge{max-width:100px}
+  .main_badge .badge_main .scope_badge{width:100px;height:100px;min-width:100px}
+}
+.main_badge .badge_main .tit_badge{margin-top:15px}
 .main_badge .badge_main .unset_main{margin:-11.2px 0 0 20px}
+
 
 .slide_tour{display:flex;align-items:center;position:relative;width:100%;}
 .slide_tour .slider{display:flex;z-index:10;transition:transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);margin-left:1em}
 .main_badge .slide_tour{margin-top:30px}
 .main_badge .list_badge{list-style:none;margin:0;padding-left:0}
 .main_badge .list_badge li{position:relative;margin-left:1em;padding-left:0}
+.main_badge .list_badge li:first-child{margin-left:0}
 .main_badge .list_badge .main-selected .scope_badge{border:3px solid #011052}
 .main_badge .list_badge .link_badge:hover .scope_badge{transform:scale3d(1.02, 1.02, 1.02);box-shadow: 2px 4px 18px #00000029;}
-.main_badge .list_badge .scope_badge.dragging{}
-.main_badge .txt_info{display:block;padding:0 1em;margin:30px 0 0 0}
+.main_badge .txt_info{display:block;font-size:.8rem;margin:30px 0 0 0}
 @media (hover: none) {
     .main_badge .txt_info{display:none}
 }
