뭔데 왜 안돼

--- a/diaryapp/templates/diaryapp/list_diary.html
+++ b/diaryapp/templates/diaryapp/list_diary.html
@@ -44,7 +44,7 @@
                             <div class="badge_tour">
                                 <span class="scope_badge">
                                     <em class="screen_out">{{ item.badge_name }} 뱃지</em>
-                                    <img src="data:image/png;base64,{{ item.badge_image }}" class="img_badge"  alt={{ item.badge_name }}>
+                                    <img src="data:image/png;base64,{{ item.badge_image }}" class="img_badge"  alt="{{ item.badge_name }}">
                                 </span>
                                 <em class="screen_out">별명</em>
                                 <strong class="tit_badge">{{ item.nickname }}</strong>
