--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -5,11 +5,11 @@
     <div class="write-container">
         <h1 style="color: #636363; font-weight: bold;">{{ diary.diarytitle }}</h1>
         <div class="badge_tour">
-            <a href="" class="link_badge">
+            <a {% if is_own_page %}href="{% url 'list_badge' %}"{% endif %} class="link_badge">
                 <span class="scope_badge">
                     <!-- Add any additional badge content here if needed -->
                     <em class="screen_out">{{ badge_name }} 뱃지</em>
-                    <img src="data:image/png;base64,{{ badge_image }}" class="img_badge"  alt={{ badge_name }}>
+                    <img src="data:image/png;base64,{{ badge_image }}" class="img_badge"  alt="{{ badge_name }}">
                 </span>
                 <em class="screen_out">별명</em>
                 <strong class="tit_badge">{{ nickname }}</strong>
@@ -113,20 +113,24 @@
 
     {% if show_modal %}
     <!-- 모달 창 : 뱃지, 별명 획득 -->
-    <div class="modal fade" id="badgeModal" tabindex="-1" role="dialog" aria-labelledby="badgeModalLabel" aria-hidden="true">
+    <div class="modal_badge modal fade" id="badgeModal" tabindex="-1" role="dialog" aria-labelledby="badgeModalLabel" aria-hidden="false">
         <div class="modal-dialog">
             <div class="modal-content">
                 <h2 class="screen_out">다이어리 뱃지, 별명 획득 모달창</h2>
                 <div class="modal-body">
-                    <em class="screen_out">{{ badge_name }} 뱃지</em>
-                    <img id="badgeImageModal" src="data:image/png;base64,{{ badge_image }}" alt={{ badge_name }}>
-                    <em class="screen_out">별명</em>
-                    <strong id="nicknameModal" class="txt_nickname">{{ nickname }}</strong>
+                    <div class="badge_tour">
+                        <span class="scope_badge">
+                            <em class="screen_out">{{ badge_name }} 뱃지</em>
+                            <img src="data:image/png;base64,{{ badge_image }}" class="img_badge"  alt="{{ badge_name }}">
+                        </span>
+                        <em class="screen_out">별명</em>
+                        <strong class="tit_badge">{{ nickname }}</strong>
+                    </div>
                     <p class="txt_info">축하합니다! 뱃지와 별명을 획득했습니다.</p>
                 </div>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">닫기</button>
             </div>
         </div>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">닫기</button>
     </div>
     <script>
         // 모달 창 : 뱃지, 별명 획득
