--- a/diaryapp/templates/diaryapp/wishlist.html
+++ b/diaryapp/templates/diaryapp/wishlist.html
@@ -34,7 +34,7 @@
             </span>
         </div>
         <button class="btn-diary-action">
-            <a href="{% url 'list_diary' %}">나의 다이어리 리스트</a>
+            <a href="{% url 'list_diary' %}">전체 다이어리 보기</a>
         </button>
     </div>
 </section>
