--- a/diaryapp/templates/diaryapp/write_diary.html
+++ b/diaryapp/templates/diaryapp/write_diary.html
@@ -14,6 +14,21 @@
                 <label for="id_place" style="color: #636363; font-size: 22px;">장소:</label>
                 {{ form.place }}
             </p>
+
+<!--            <div>-->
+<!--                <label for="{{ form.diarytitle.id_for_label }}">일기 제목:</label>-->
+<!--                {{ form.diarytitle }}-->
+<!--            </div>-->
+
+<!--            <div>-->
+<!--                <label for="{{ form.place.id_for_label }}">장소:</label>-->
+<!--                <select name="place" id="{{ form.place.id_for_label }}">-->
+<!--                    {% for plan in available_plans %}-->
+<!--                        <option value="{{ plan.province }} {{ plan.city }}">{{ plan.province }} {{ plan.city }} - {{ plan.plan_title }}</option>-->
+<!--                    {% endfor %}-->
+<!--                </select>-->
+<!--            </div>-->
+
             <p>
                 <label for="id_withfriend" style="color: #636363; font-size: 22px;">함께한 친구:</label>
                 {{ form.withfriend }}
