--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -552,4 +552,17 @@ main {
 #list_diary .card-body {
     padding: 1rem;
 }
-
+#detail_diary .btn-third {
+    padding: 0.6rem 0.375rem !important; /* 패딩 조정 (상하좌우) */
+    font-size: 1.0rem !important; /* 폰트 크기 조정 */
+    line-height: 1.5 !important; /* 라인 높이 조정 */
+    font-weight: 400 !important;
+    background-color: transparent !important;
+    color: (#fff, .85) !important;
+    border: 0.10px solid #51585e !important;
+    text-decoration: none !important;
+    text-align: center !important;
+    transition: all 0.3s ease !important;
+    vertical-align: middle !important;
+    cursor: pointer !important;
+}
