--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -7,9 +7,8 @@
         <div class="badge_tour">
             <a {% if is_own_page %}href="{% url 'list_badge' %}"{% endif %} class="link_badge">
                 <span class="scope_badge">
-                    <!-- Add any additional badge content here if needed -->
                     <em class="screen_out">{{ badge_name }} 뱃지</em>
-                    <img src="data:image/png;base64,{{ badge_image }}" class="img_badge"  alt="{{ badge_name }}">
+                    <img src="data:image/png;base64,{{ badge_image }}" class="img_badge" alt="{{ badge_name }}">
                 </span>
                 <em class="screen_out">별명</em>
                 <strong class="tit_badge">{{ nickname }}</strong>
@@ -71,11 +70,15 @@
                     <div class="badge_tour">
                         {% if comment.badge_name and comment.badge_image %}
                             <span class="scope_badge">
-                                <img src="data:image/png;base64,{{ comment.badge_image }}" alt="{{ comment.badge_name }} 뱃지" class="img_badge">
-                                {{ comment.badge_name }} 뱃지
+                                <a href="{% url 'other_diary' comment.user_email %}">
+                                    <img src="data:image/png;base64,{{ comment.badge_image }}" alt="{{ comment.badge_name }} 뱃지" class="img_badge">
+                                    {{ comment.badge_name }} 뱃지
+                                </a>
                             </span>
                         {% endif %}
-                        <strong>{{ comment.nickname }}</strong>
+                        <a href="{% url 'other_diary' comment.user_email %}">
+                            <strong>{{ comment.nickname }}</strong>
+                        </a>
                         {{ comment.created_at|date:"Y년 n월 j일" }}
                     </div>
                     <p>{{ comment.comment }}</p>
@@ -101,7 +104,7 @@
                     <!-- JavaScript로 동적으로 내용이 삽입됩니다. -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
                     <button id="wishlistBtn" data-place="{{ diary.place }}" class="btn btn-secondary">찜하기</button>
                     <a id="travelPlanBtn" class="btn btn-third" href="#">여행 계획으로 이동</a>
                 </div>
@@ -109,11 +112,10 @@
         </div>
     </div>
 
-
     {% if show_modal %}
     <!-- 모달 창 : 뱃지, 별명 획득 -->
     <div class="modal_badge modal fade" id="badgeModal" tabindex="-1" role="dialog" aria-labelledby="badgeModalLabel" aria-hidden="false">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <h2 class="screen_out">다이어리 뱃지, 별명 획득 모달창</h2>
                 <div class="modal-body">
@@ -145,88 +147,109 @@
     {% endif %}
 
     <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var openModalButtons = document.querySelectorAll('.open-modal');
-
-        openModalButtons.forEach(function(button) {
-            button.addEventListener('click', function(e) {
-                e.preventDefault();
-                var uniqueDiaryId = this.getAttribute('data-unique-diary-id');
-                fetch(`/diary/plan_modal/${uniqueDiaryId}/`)
-                    .then(response => response.json())
-                    .then(data => {
-                        var modalBody = document.querySelector('#planModal .modal-body');
-                        if (data.error) {
-                            console.error('Error fetching plan modal content:', data.error);
-                            return;
-                        }
-                        modalBody.innerHTML = `
-                            <section id="diary" class="planmodal plan_modal">
-                                <h2 class="screen_out">여행 다이어리 장소 모달</h2>
-                                <p><strong>여행 제목:</strong> ${data.plan_title}</p>
-                                <p><strong>장소:</strong> ${data.province} ${data.city}</p>
-                                <p><strong>여행 날짜:</strong> ${data.days ? Object.keys(data.days).join(', ') : '없음'}</p>
-                            </section>
-                        `;
-                        var planModal = new bootstrap.Modal(document.getElementById('planModal'));
-                        planModal.show();
-                    })
-                    .catch(error => {
-                        console.error('Error fetching plan modal content:', error);
-                    });
+        // 장소 모달
+        $('.open-modal').on('click', function(e) {
+            e.preventDefault();
+            var uniqueDiaryId = $(this).data('unique-diary-id');
+            $.ajax({
+                url: `/diary/plan_modal/${uniqueDiaryId}/`,
+                type: 'GET',
+                success: function(data) {
+                    if (data.error) {
+                        console.error('Error fetching plan modal content:', data.error);
+                        return;
+                    }
+                    var modalContent = `
+                        <section id="diary" class="planmodal plan_modal">
+                            <h2 class="screen_out">여행 다이어리 장소 모달</h2>
+                            <p><strong>여행 제목:</strong> ${data.plan_title}</p>
+                            <p><strong>장소:</strong> ${data.province} ${data.city}</p>
+                            <p><strong>여행 날짜:</strong></p>
+                            <ul>
+                                ${Object.entries(data.days).map(([day, places]) => `
+                                    <li>${day}: ${places.length > 0 ? places.join(', ') : '일정 없음'}</li>
+                                `).join('')}
+                            </ul>
+                        </section>
+                    `;
+                    $('#planModal .modal-body').html(modalContent);
+                    $('#wishlistBtn').data('province', data.province);
+                    $('#wishlistBtn').data('city', data.city);
+                    $('#wishlistBtn').data('travel-dates', JSON.stringify(data.days));
+                    $('#planModal').modal('show');
+                },
+                error: function(error) {
+                    console.error('Error fetching plan modal content:', error);
+                }
             });
+        });
+
+        // 모달 닫기
+        $(document).on('click', '[data-dismiss="modal"], [data-bs-dismiss="modal"]', function() {
+          $(this).closest('.modal').modal('hide');
         });
 
         // 모달이 닫혔을 때 내용 비우기
-        var planModalElement = document.getElementById('planModal');
-        if (planModalElement) {
-            planModalElement.addEventListener('hidden.bs.modal', function () {
-                document.querySelector('#planModal .modal-body').innerHTML = '';
-            });
-        }
-
-        const modal = new bootstrap.Modal(document.getElementById('planModal'));
-
-        document.getElementById('planModal').addEventListener('shown.bs.modal', function () {
-            const modalBody = document.querySelector('#planModal .modal-body');
-            const bodyHeight = window.innerHeight * 0.5; // 화면 50% 높이
-            modalBody.style.maxHeight = `${bodyHeight}px`;
-            modalBody.style.overflowY = 'auto';
+        $('#planModal').on('hidden.bs.modal', function() {
+            $(this).find('.modal-body').empty();
         });
-    });
 
-    // 찜하기 버튼 클릭 이벤트
-    document.addEventListener('click', function(event) {
-        if (event.target && event.target.id === 'wishlistBtn') {
-            var place = event.target.getAttribute('data-place');
-            fetch("{% url 'add_wish' %}", {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                    'X-CSRFToken': '{{ csrf_token }}'
-                },
-                body: new URLSearchParams({
-                    'place': place
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.status === 'success') {
-                    if (data.created) {
-                        alert('찜 목록에 추가되었습니다!');
-                    } else {
-                        alert('이미 찜 목록에 있습니다.');
-                    }
-                } else {
-                    alert('이미 찜 목록에 있습니다.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('이미 찜 목록에 있습니다.');
+        // 모달 높이 조정
+        $('#planModal').on('shown.bs.modal', function() {
+            var modalBody = $(this).find('.modal-body');
+            var bodyHeight = $(window).height() * 0.5;
+            modalBody.css({
+                'max-height': bodyHeight + 'px',
+                'overflow-y': 'auto'
             });
-        }
-    });
+        });
+
+        // 찜하기 버튼 클릭 이벤트
+        $('#wishlistBtn').on('click', function() {
+            var place = $(this).data('place');
+            var province = $(this).data('province');
+            var city = $(this).data('city');
+            var travel_dates = $(this).data('travel-dates');
+
+            console.log("Sending data to server:", {
+                'place': place,
+                'province': province,
+                'city': city,
+                'travel_dates': travel_dates
+            });
+
+            $.ajax({
+                url: "{% url 'add_wish' %}",
+                type: 'POST',
+                data: {
+                    'place': place,
+                    'province': province,
+                    'city': city,
+                    'travel_dates': travel_dates,
+                    'csrfmiddlewaretoken': '{{ csrf_token }}'
+                },
+                success: function(data) {
+                    if (data.status === 'success') {
+                        if (data.created) {
+                            alert('찜 목록에 추가되었습니다!');
+                        } else {
+                            alert('이미 찜 목록에 있습니다.');
+                        }
+                    } else {
+                        alert('처리 중 오류가 발생했습니다.');
+                    }
+                },
+                error: function() {
+                    alert('처리 중 오류가 발생했습니다.');
+                }
+            });
+        });
+
+        // 여행 계획으로 이동 버튼 클릭 이벤트
+        $('#travelPlanBtn').on('click', function(e) {
+            e.preventDefault();
+            window.location.href = "{% url 'list_diary' %}";
+        });
     </script>
 </section>
 {% include 'footer.html' %}
