--- a/Jpage/templates/Jpage/map.html
+++ b/Jpage/templates/Jpage/map.html
@@ -854,7 +854,7 @@
     });
 
     // Kakao API 키
-    const kakaoApiKey = '1ca1474a66a4cd0fdd5d9e5a9e020070';
+    const kakaoApiKey = '자신의 키를 입력하세요';
 
     // 장소 추가 버튼 클릭 이벤트 처리
     document.getElementById('openModalButton').addEventListener('click', function() {
